@@ -1,3 +1,11 @@
+Wed Aug 26 23:05:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/RakeResults_T.h:
+        * dds/DCPS/RakeResults_T.cpp:
+
+          Updated ordered_access support to make better use of existing
+          primitives offered by QueryCondition.
+
 Wed Aug 26 21:16:21 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * bin/DCPS/CPPTemplate.pm:
